--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "task1-Vdkk07"]
 	path = task1-Vdkk07
 	url = https://github.com/School-of-Solana/task1-Vdkk07
+[submodule "task2-Vdkk07"]
+	path = task2-Vdkk07
+	url = https://github.com/School-of-Solana/task2-Vdkk07
