--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "task2-Vdkk07"]
 	path = task2-Vdkk07
 	url = https://github.com/School-of-Solana/task2-Vdkk07
+[submodule "task3-Vdkk07"]
+	path = task3-Vdkk07
+	url = https://github.com/School-of-Solana/task3-Vdkk07
