--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "task3-Vdkk07"]
 	path = task3-Vdkk07
 	url = https://github.com/School-of-Solana/task3-Vdkk07
+[submodule "task4-Vdkk07"]
+	path = task4-Vdkk07
+	url = https://github.com/School-of-Solana/task4-Vdkk07
